--- a/less/header.less
+++ b/less/header.less
@@ -30,3 +30,11 @@
 .top-menu {
   display: none;
 }
+
+.main-title {
+  padding-top: 36px;
+  padding-bottom: 45px;
+  color: @color--base;
+  font-size: 24px;
+  font-weight: 300;
+}
