--- a/less/variables.less
+++ b/less/variables.less
@@ -1,9 +1,10 @@
 /*  Colors  */
 
 @color--base: #fff;
+@post-txt-color: #283645;
 
 
 @bg-color--base: #1d2631;
 @bg-color--tips: #f2f2f2;
 @border-color: #e5e5e5;
-@contact-color: rgb(210, 40, 86);
+@warning-color: rgb(210, 40, 86);
