--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@
   padding: 0 20px;
 }
 .page-wrap {
-  width: 320px;
+  max-width: 320px;
+  margin: 0 auto;
   text-align: center;
   overflow: hidden;
 }
@@ -18,8 +19,12 @@ html {
   font-weight: 300;
   line-height: 24px;
 }
-p {
+p,
+h1 {
   margin: 0;
+}
+ul {
+  padding: 0;
 }
 .slider__control {
   display: flex;
@@ -63,6 +68,13 @@ p {
 }
 .top-menu {
   display: none;
+}
+.main-title {
+  padding-top: 36px;
+  padding-bottom: 45px;
+  color: #ffffff;
+  font-size: 24px;
+  font-weight: 300;
 }
 .intro {
   background: url("../img/intro-iphone.png") 95% 130% no-repeat;
@@ -237,6 +249,52 @@ p {
   background: #f2f2f2;
   padding: 40px 0;
 }
+.blog {
+  padding-top: 10px;
+}
+.blog__item {
+  color: #283645;
+  padding-top: 28px;
+  padding-bottom: 28px;
+  text-align: start;
+  border-bottom: 1px solid #e5e5e5;
+}
+.blog__item:last-child {
+  border: none;
+}
+.blog__name {
+  font-size: 18px;
+  font-weight: 700;
+  padding-bottom: 10px;
+}
+.blog__date {
+  font-size: 12px;
+  font-weight: 400;
+  text-transform: uppercase;
+  padding-bottom: 20px;
+  color: #d22856;
+}
+.blog__preview {
+  font-size: 14px;
+  font-weight: 400;
+}
+.pagination {
+  display: flex;
+  list-style-type: none;
+  padding-bottom: 60px;
+}
+.pagination__link {
+  text-decoration: none;
+  color: inherit;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 30px;
+  text-transform: uppercase;
+  padding: 16px 24px;
+  margin-right: 8px;
+  border: 2px solid #e5e5e5;
+}
+/*  Footer Index  */
 .index-footer {
   padding-top: 50px;
 }
@@ -271,4 +329,50 @@ p {
   background: url("../img/footer-triangle.svg") center top no-repeat;
   position: absolute;
   z-index: 11;
+}
+/*  Footer other  */
+.footer-logo {
+  width: 145px;
+  height: 40px;
+  margin-bottom: 40px;
+  display: inline-block;
+  background: url(../img/footer-logo.png) 50% 50% no-repeat;
+}
+.social {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 35px;
+}
+.social-link {
+  display: inline-block;
+  width: 51px;
+  height: 51px;
+  border: 3px solid #e5e5e5;
+  border-radius: 50%;
+  margin-right: 12px;
+}
+.social-link--twitter {
+  background: url("../img/icon-twitter.png") 50% 50% no-repeat;
+}
+.social-link--facebook {
+  background: url("../img/icon-facebook.png") 50% 50% no-repeat;
+}
+.social-link--youtube {
+  background: url("../img/icon-youtube.png") 50% 50% no-repeat;
+  margin-right: 0;
+}
+.copyright {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 46px;
+}
+.copyright-link {
+  width: 27px;
+  height: 34px;
+  display: inline-block;
+}
+.copyright-link--htmlacademy {
+  padding-left: 15px;
+  background: url("../img/icon-htmlacademy.png") 50% 50% no-repeat;
 }
