--- a/less/base.less
+++ b/less/base.less
@@ -4,7 +4,8 @@
 }
 
 .page-wrap {
-  width: 320px;
+  max-width: 320px;
+  margin:  0 auto;
   text-align: center;
   overflow: hidden;
 }
@@ -16,6 +17,10 @@ html {
   line-height: 24px;
 }
 
-p {
+p,h1 {
   margin: 0;
+}
+
+ul {
+  padding: 0;
 }
