--- a/less/base.less
+++ b/less/base.less
@@ -1,11 +1,11 @@
 .wrap-inner {
-  //width: 300px;
   padding: 0 20px;
+  max-width: 320px;
+  min-width: auto;
+  margin:  0 auto;
 }
 
 .page-wrap {
-  max-width: 320px;
-  margin:  0 auto;
   text-align: center;
   overflow: hidden;
 }
