--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ h1 {
   margin: 0;
 }
 ul {
+  margin: 0;
   padding: 0;
 }
 .slider__control {
@@ -254,6 +255,7 @@ ul {
 }
 .blog {
   padding-top: 10px;
+  padding-bottom: 40px;
 }
 .blog__item {
   color: #283645;
@@ -264,6 +266,7 @@ ul {
 }
 .blog__item:last-child {
   border: none;
+  padding-bottom: 0;
 }
 .blog__name {
   font-size: 18px;
@@ -283,19 +286,26 @@ ul {
 }
 .pagination {
   display: flex;
+  justify-content: center;
   list-style-type: none;
   padding-bottom: 60px;
+}
+.pagination__item {
+  border: 2px solid #e5e5e5;
+  margin-right: 8px;
+}
+.pagination__item:last-child {
+  margin-right: 0;
 }
 .pagination__link {
   text-decoration: none;
   color: inherit;
+  display: block;
   font-size: 18px;
   font-weight: 700;
   line-height: 30px;
   text-transform: uppercase;
   padding: 16px 24px;
-  margin-right: 8px;
-  border: 2px solid #e5e5e5;
 }
 /*  Footer Index  */
 .index-footer {
