--- a/less/main.less
+++ b/less/main.less
@@ -1,5 +1,6 @@
 .blog {
   padding-top: 10px;
+  padding-bottom: 40px;
 }
 
 .blog__item {
@@ -11,6 +12,7 @@
 
   &:last-child {
     border: none;
+    padding-bottom: 0;
   }
 }
 
@@ -35,17 +37,26 @@
 
 .pagination {
   display: flex;
+  justify-content: center;
   list-style-type: none;
   padding-bottom: 60px;
 }
 
+.pagination__item {
+  border: 2px solid @border-color;
+  margin-right: 8px;
+
+  &:last-child {
+    margin-right: 0;
+  }
+}
+
 .pagination__link {
   .nonedecoration-link();
+  display: block;
   font-size: 18px;
   font-weight: 700;
   line-height: 30px;
   text-transform: uppercase;
-  padding: 16px 24px;
-  margin-right: 8px;
-  border: 2px solid @border-color;
+  padding: 16px 24px; 
 }
