--- a/less/intro.less
+++ b/less/intro.less
@@ -1,5 +1,6 @@
 .intro {
-  background: url("../img/intro-iphone.png") 45% 130% no-repeat;
+  padding-top: 90px;
+  background: url("../img/intro-iphone.png") 45% 110% no-repeat;
 }
 
 .intro__title {
