--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,9 @@ ul {
 .page-header {
   background: rgba(0, 0, 0, 0.3);
   padding: 21px 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 .page-header .wrap-inner {
   display: flex;
@@ -78,7 +81,8 @@ ul {
   font-weight: 300;
 }
 .intro {
-  background: url("../img/intro-iphone.png") 45% 130% no-repeat;
+  padding-top: 90px;
+  background: url("../img/intro-iphone.png") 45% 110% no-repeat;
 }
 .intro__title {
   padding: 25px 27px 320px;
