--- a/less/header.less
+++ b/less/header.less
@@ -6,6 +6,9 @@
 .page-header {
   background: rgba(0, 0, 0, .3);
   padding: 21px 0;
+  position: fixed;
+  top: 0;
+  width:100%;
 
   .wrap-inner {
     display: flex;
