--- a/less/download.less
+++ b/less/download.less
@@ -1,12 +1,13 @@
 .download {
   background: @bg-color--base;
   color: @color--base;
-
   padding-top: 28px;
+  padding-bottom: 35px;
 }
 
 .btn {
-  display: block;
+  display: inline-block;
+  width: 203px;
   padding: 14px 35px 17px;
   border: 3px solid white;
   border-radius: 40px;
@@ -45,6 +46,25 @@
   }
 }
 
-.download__desc {
-  padding-bottom: 35px;
+
+//  For tablet
+
+@media (min-width:@screen_md) {
+  .download {
+    padding-right: 325px;
+    padding-top: 35px;
+    z-index: 2;
+    background: none;
+    padding-bottom: 110px;
+  }
+
+  .platform {
+    padding-top: 45px;
+    padding-bottom: 40px;
+  }
+
+  .download__desc {
+    font-size: 18px;
+    line-height: 24px;
+  }
 }
