--- a/less/intro.less
+++ b/less/intro.less
@@ -1,10 +1,45 @@
 .intro {
   padding-top: 90px;
-  background: url("../img/intro-iphone.png") 45% 110% no-repeat;
+  background: url("../img/header-bg.jpg") center no-repeat;
+  background-size: cover;
+
+  .wrap-inner {
+    background: url("../img/intro-iphone.png") no-repeat;
+    background-position: 50% bottom;
+  }
 }
 
 .intro__title {
   padding: 25px 27px 320px; 
   color: @color--base;
   font-size: 24px;
-} 
+}
+
+//  For tablet
+
+@media (min-width:@screen_md) {
+  .intro {
+    display: flex;
+    background: none;
+
+    .wrap-inner {
+    background: none;
+    }
+  }
+
+  .intro__title {
+    padding: 100px 0 0; 
+    color: @color--base;
+    font-size: 40px;
+    line-height: 48px;
+    padding-right: 370px;
+    padding-left: 40px; 
+  }
+
+  .wrap {
+    background: url("../img/iphone-6.png") calc(100%-10px) bottom no-repeat,
+                url("../img/header-bg.jpg") center no-repeat;
+
+    background-size: auto, cover;
+  }
+}
