<megapolis> for tablet

--- a/less/main.less
+++ b/less/main.less
@@ -4,7 +4,7 @@
 }
 
 .blog__item {
-  color: @post-txt-color;
+  color: @txt-color;
   padding-top: 28px;
   padding-bottom: 28px;
   text-align: start;
