--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@
 }
 .page-wrap {
   text-align: center;
-  overflow: hidden;
 }
 html {
   font-family: 'Open Sans', sans-serif;
@@ -120,7 +119,7 @@ ul {
     padding-left: 40px;
   }
   .wrap {
-    background: url("../img/iphone-6.png") calc(90%) bottom no-repeat, url("../img/header-bg.jpg") center no-repeat;
+    background: url("../img/iphone-6.png") calc(85%) bottom no-repeat, url("../img/header-bg.jpg") center no-repeat;
     background-size: auto, cover;
   }
 }
@@ -198,8 +197,22 @@ ul {
   content: " ";
   display: block;
   width: 100%;
-  height: 32px;
+  height: 90px;
   background-image: linear-gradient(175deg, white 50%, #f2f2f2 50%);
+}
+@media (min-width: 700px) {
+  .carrot {
+    padding: 60px 15px 35px;
+  }
+  .carrot__txt {
+    color: #283645;
+    font-size: 40px;
+    line-height: 48px;
+    padding: 0;
+  }
+  .carrot__txt:last-child {
+    padding-right: 20px;
+  }
 }
 .tips {
   background: #f2f2f2;
