--- a/less/megapolis.less
+++ b/less/megapolis.less
@@ -18,7 +18,24 @@
     content: " ";
     display: block;
     width: 100%;
-    height: 32px;
+    height: 90px;
     background-image: linear-gradient(175deg, white 50%, @bg-color--tips 50%);
+  }
+}
+
+@media (min-width:@screen_md) {
+  .carrot {
+    padding: 60px 15px 35px;
+  }
+
+  .carrot__txt {
+    color: @txt-color;
+    font-size: 40px;
+    line-height: 48px;
+    padding: 0;
+
+    &:last-child {
+      padding-right: 20px;
+    }
   }
 }
