--- a/less/tips.less
+++ b/less/tips.less
@@ -27,3 +27,15 @@
 .tips__desc {
   font-weight: 400;
 }
+
+@media (min-width:@screen_md) {
+  .tips {
+    padding-top: 25px;
+
+    .wrap-inner {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+    }
+  }
+}
