--- a/less/review.less
+++ b/less/review.less
@@ -13,6 +13,11 @@
 
 .review__item {
   //padding-top: 50px;
+  display: none;
+  
+  &:first-child {
+    display: block;
+  }
 }
 
 .review__author {
