--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ ul {
   margin-right: 0;
 }
 .slider__toggle--active {
+  background: #ffffff;
   border: 3px solid #283645;
 }
 .page-header {
@@ -263,7 +264,7 @@ ul {
   }
 }
 .review {
-  padding-top: 50px;
+  padding-top: 30px;
 }
 .review:after {
   content: " ";
@@ -277,20 +278,42 @@ ul {
   display: none;
 }
 .review__item:first-child {
-  display: block;
+  display: flex;
+  flex-direction: column;
 }
 .review__author {
   font-size: 18px;
   font-weight: 700;
   line-height: 30px;
-  padding-bottom: 25px;
+  order: 1;
+  padding-bottom: 10px;
+}
+.review__author-desc {
+  display: none;
+  font-weight: 400;
+  order: 2;
+  color: #283645;
 }
 .review__comment {
+  padding-bottom: 40px;
   font-weight: 400;
   line-height: 30px;
+  order: 3;
 }
-.review-slider {
-  padding-top: 40px;
+@media (min-width: 700px) {
+  .review__comment {
+    font-size: 18px;
+    order: 1;
+  }
+  .review__author {
+    font-size: 20px;
+    padding-bottom: 5px;
+    order: 2;
+  }
+  .review__author-desc {
+    display: block;
+    order: 3;
+  }
 }
 .price {
   padding-top: 65px;
@@ -406,12 +429,22 @@ ul {
 }
 .effect {
   padding: 100px 0;
-  width: 245px;
   display: none;
 }
-.effect:after {
+.effect__item {
+  text-align: left;
+  padding-left: 307px;
+  position: relative;
+}
+.effect__item:before {
+  position: absolute;
+  left: 0;
+  bottom: -70px;
   content: " ";
   display: block;
+  background: url("../img/effect-clock.png");
+  width: 262px;
+  height: 302px;
 }
 .effect__title {
   font-size: 30px;
