--- a/less/effect.less
+++ b/less/effect.less
@@ -1,11 +1,23 @@
 .effect {
   padding: 100px 0;
-  width: 245px;
+  //width: 245px;
   display: none;
+}
 
-  &:after {
+.effect__item {
+  text-align: left;
+  padding-left: 307px;
+  position: relative;
+  
+  &:before {
+    position: absolute;
+    left: 0;
+    bottom: -70px;
     content: " ";
     display: block;
+    background: url("../img/effect-clock.png");
+    width: 262px;
+    height: 302px;
   }
 }
 
@@ -33,9 +45,5 @@
 @media (min-width:@screen_md) {
   .effect {
     display: block;
-    
-    .wrap-inner {
-      
-    }
   }
 }
