--- a/css/style.css
+++ b/css/style.css
@@ -594,6 +594,22 @@ ul {
     justify-content: space-between;
   }
 }
+table .row-1 {
+  color: #ffffff;
+  background: #1d2631;
+}
+table .row-1 td {
+  padding: 21px 40px 15px;
+}
+table .row-1 .col-1 {
+  visibility: hidden;
+}
+table .row-1 .tarif-name {
+  text-transform: uppercase;
+  font-size: 16px;
+  line-height: 30px;
+  font-weight: 700;
+}
 table td {
-  border: 2px solid #ccc;
+  border: 1px solid #ccc;
 }
