--- a/less/footer.less
+++ b/less/footer.less
@@ -157,7 +157,28 @@
 
 
 table {
+  
+  .row-1 {
+    td {
+      padding: 21px 40px 15px;
+    }
+    
+    .col-1{
+      visibility: hidden;
+    }
+    
+    .tarif-name {
+      text-transform: uppercase;
+      font-size: 16px;
+      line-height: 30px;
+      font-weight: 700;
+    }
+    
+    color: @color--base;
+    background: @bg-color--base;
+  }
+  
   td {
-    border: 2px solid #ccc;
+    border: 1px solid #ccc;
   }
 }
