--- a/less/price.less
+++ b/less/price.less
@@ -3,7 +3,7 @@
   background: @bg-color--tips;
 
   .wrap-inner {
-    padding: 0;
+    //padding: 0;
   }
 }
 
@@ -59,6 +59,7 @@
 
   &--active {
     &:after {
+      content: " ";
       background: url("../img/active_option.png") 0 0 no-repeat;
       width: 29px;
       height: 26px;
@@ -69,4 +70,77 @@
 .price-slider {
   background: @bg-color--tips;
   padding: 40px 0;
+}
+
+.tarif-table {
+  display: none;
+  //padding-left: 200px;
+  
+  tr {
+    height: 49px;
+    background: @color--base;
+  }
+  
+  td {
+    border: 1px solid #ccc;
+  }
+    
+  .col-1 {
+    color: #283645;
+    font-weight: 400;
+    line-height: 30px;
+  }
+  
+  .row-1 {
+    td {
+      padding: 12px 0 7px;
+      width: 156px;
+    }
+    
+    .col-1{
+      visibility: hidden;
+    }
+    
+    .tarif-name {
+      text-transform: uppercase;
+      font-size: 16px;
+      line-height: 30px;
+      font-weight: 700;
+    }
+    
+    .tarif-cost {
+      display: block;
+      font-size: 18px;
+      line-height: 30px;
+    }
+    
+    color: @color--base;
+    background: #283645;
+  }
+}
+
+
+.price__option {
+  background: url(../img/none-active_option.png) 50% 50% no-repeat;
+  
+  &--active {
+    background: url(../img/active_option.png) 50% 50% no-repeat;
+  }
+}
+
+
+//  For tablet 
+
+@media (min-width:@screen_md) {
+  .tarif-table {
+    display: inline-table;
+  }
+  
+  .tarif {
+    display: none;
+  }
+  
+  .price-slider {
+    display: none;
+  }
 }
