--- a/less/footer.less
+++ b/less/footer.less
@@ -126,6 +126,10 @@
   
   .contacts__item {
     width: 300px;
+    
+    &:last-child {
+      
+    }
   }
   
   .page-footer {
@@ -151,34 +155,5 @@
       display: flex;
       justify-content: space-between;
     }
-  }
-}
-
-
-
-table {
-  
-  .row-1 {
-    td {
-      padding: 21px 40px 15px;
-    }
-    
-    .col-1{
-      visibility: hidden;
-    }
-    
-    .tarif-name {
-      text-transform: uppercase;
-      font-size: 16px;
-      line-height: 30px;
-      font-weight: 700;
-    }
-    
-    color: @color--base;
-    background: @bg-color--base;
-  }
-  
-  td {
-    border: 1px solid #ccc;
   }
 }
